--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # Visualizing Electric Scooter Rides Around Minneapolis in 2021
 
+# Authors: Becca Dura & Joel Deutsch
+
 This project can be run with Processing.
 
 The data folder within the ScooterMap folder should contain:
